update Vuetify And Create User LogIn Page

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,3 +1,5 @@
 {
-  "Home":"الصفحة الرئيسة" 
+  "Email Verification":"التحقق من البريد الإلكتروني",
+  "Enter the code we just sent to your Email":"أدخل الرمز الذي أرسلناه للتو إلى بريدك الإلكتروني",
+  "Verify":"التحقق"
 }
