--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,5 @@
 {
-    "Home":"Home"
+    "Email Verification":"Email Verification",
+    "Enter the code we just sent to your Email":"Enter the code we just sent to your Email",
+    "Verify":"Verify"
 }
