create LogIn Admin Page

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -18,5 +18,8 @@
   "Gender":"الجنس",
   "male":"ذكر",
   "female":"انثى",
-  "submit":"ارسال"
+  "submit":"ارسال",
+  "User Name":"اسم المستخدم",
+  "Admin Login":"تسجيل الدخول المسؤول"
+  
 }
