update LogIn User

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,14 +1,13 @@
 {
-  "Email Verification":"التحقق من البريد الإلكتروني",
-  "Enter the code we just sent to your Email":"أدخل الرمز الذي أرسلناه للتو إلى بريدك الإلكتروني",
-  "Verify":"التحقق",
+  "Phone Verification":"التحقق من رقم الهاتف",
+  "Enter the code we just sent to your Phone Number":"أدخل الرمز الذي أرسلناه للتو إلى رقمك",
+  "Get OTP":"الحصول على رمز الدخول",
   "Login":"تسجيل الدخول",
-  "Enter Your Email:":"أدخل البريد الإلكتروني الخاص بك",
+  "Enter Your Phome Number:":"أدخل رقم الهاتف الخاص بك",
   "Submit":"ارسال",
   "E-mail":"بريدك الإلكتروني",
   "Must be a valid email.":"يجب أن يكون بريد إلكتروني صالح",
   "You Dont Have Accout ":"ليس لديك حساب",
-  "Sign Up":"أنشئ حساب",
   "First Name":"الاسم الأول",
   "Last Name":"اسم العائلة",
   "Phone Number":"رقم الهاتف",
