--- a/locales/en.json
+++ b/locales/en.json
@@ -1,14 +1,13 @@
 {
-    "Email Verification":"Email Verification",
+    "Phone Verification":"Phone Verification",
     "Enter the code we just sent to your Email":"Enter the code we just sent to your Email",
     "Verify":"Verify",
     "Login":"Login",
-    "Enter Your Email:":"Enter Your Email:",
+    "Enter Your Phome Number:":"Enter Your Phome Number",
     "Submit":"Submit",
     "E-mail":"E-mail",
     "Must be a valid email.":"Must be a valid email.",
     "You Dont Have Accout ":"You Dont Have Accout ",
-    "Sign Up":"Sign Up",
     "First Name":"First Name :",
     "Last Name":"Last Name :",
     "Phone Number":"Phone Number :",
